background image added

--- a/nasa.html
+++ b/nasa.html
@@ -8,23 +8,19 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+    <!-- Navigation menu on the top -->
+    <nav>      
+        <a class="active" href="#"><span>Home</span></a>
+        <a href="#" id="apod"><span>Picture of the day</span></a>
+        <a href="#" id="asteroids"><span>Asteroids</span></a>
+        <a href="#" id="notifications"><span>Notifications</span></a>
+        <a href="#" id="earth"><span>Earth</span></a>
+        <a href="#" id="eonet"><span>EONET</span></a>
+        <a href="#" id="epic"><span>EPIC</span></a>
+        <a href="#" id="exoplanet"><span>Exoplanet</span></a>
+        <a href="#" id="mars"><span>Mars</span></a>
+        <a href="#" id="images"><span>NASA images</span></a>
     
-    <nav>
-        <div class="Logo">
-                <h4>Here will be logo1</h4>
-        </div>
-        <ul class="nav-links">
-        <li><a class="active" href="#">Home</a></li>
-        <li><a href="#" id="sun">Sun</a></li>
-        <li><a href="#" id="mercury">Mercury</a></li>
-        <li><a href="#" id="venus">Venus</a></li>
-        <li><a href="#" id="earth">Earth</a></li>
-        <li><a href="#" id="mars">Mars</a></li>
-        <li><a href="#" id="jupiter">Jupiter</a></li>
-        <li><a href="#" id="saturn">Saturn</a></li>
-        <li><a href="#" id="uranus">Uranus</a></li>
-        <li><a href="#" id="neptune">Neptune</a></li>
-        </ul>
     </nav>
     
 </body>
