--- a/nasa.html
+++ b/nasa.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <!-- Navigation menu on the top -->
+    <script src="api.js"> </script>
     <nav>      
         <a class="active" href="#"><span>Home</span></a>
         <a href="#" id="apod"><span>Picture of the day</span></a>
