js in html file

--- a/nasa.html
+++ b/nasa.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     <!-- Navigation menu on the top -->
-    <script src="api.js"> </script>
     <nav>      
         <a class="active" href="#"><span>Home</span></a>
-        <a href="#" id="apod"><span>Picture of the day</span></a>
+        <a href="apod.html" id="apod"><span>Picture of the day</span></a>
         <a href="#" id="asteroids"><span>Asteroids</span></a>
         <a href="#" id="notifications"><span>Notifications</span></a>
         <a href="#" id="earth"><span>Earth</span></a>
