--- a/nasa.html
+++ b/nasa.html
@@ -11,6 +11,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+
     <!-- Navigation menu on the top -->
     <nav id="navigation">      
         <a class="active" href="nasa.html"><span>Home</span></a>
@@ -19,111 +20,68 @@
         <a href="notifications.html" id="notifications"><span>Notifications</span></a>
         <a href="epic.html" id="epic"><span>EPIC</span></a>
         <a href="mars_weather.html" id="mars"><span>Mars</span></a>
-        
+        <a href="gallery.html" id="gallery"><span>Gallery</span></a>
     
     </nav>
-
-    <!-- About and other information-->
-
-    <div class="container">
+<img src="https://images-assets.nasa.gov/image/PIA08653/PIA08653~orig.jpg" id="bg" alt="cosmo">
+    <!-- Some information-->
+   
+    <div class="container" >
         <div class="row">
             <div class="col-md-4"> 
-                <h4>About</h4>
+                <button type="button" class="collapsible" id="info">What is NASA?</button>
+                <div class="content" id="info">
+                <span> The National Aeronautics and Space Administration -is an independent agency of the United States Federal Government responsible for the civilian space program, as well as aeronautics and space research.
+                    NASA was established in 1958, succeeding the National Advisory Committee for Aeronautics (NACA). 
+                    The new agency was to have a distinctly civilian orientation, encouraging peaceful applications in space science.[8][9][10] Since its establishment, most US space exploration efforts have been led by NASA, including the Apollo Moon landing missions, the Skylab space station, and later the Space Shuttle. 
+                    NASA is supporting the International Space Station and is overseeing the development of the Orion Multi-Purpose Crew Vehicle, the Space Launch System and Commercial Crew vehicles. 
+                    The agency is also responsible for the Launch Services Program which provides oversight of launch operations and countdown management for uncrewed NASA launches.
+                    NASA science is focused on better understanding Earth through the Earth Observing System; advancing heliophysics through the efforts of the Science Mission Directorate's Heliophysics Research Program; exploring bodies throughout the Solar System with advanced robotic spacecraft missions such as New Horizons;[13] and researching astrophysics topics, such as the Big Bang, through the Great Observatories and associated programs.</marquee>
+                </div>
+                </div>
+            <div class="col-md-4">
+                <button type="button" class="collapsible" id="info">Missions</button>
+                <div class="content" id="info">
+                    <a href="https://www.nasa.gov/specials/artemis/" ><span>Artemis Program - Humanity's return to the Moon</span></a><br>
+                    <a href="https://www.nasa.gov/exploration/commercial/crew/index.html" ><span>Commercial Crew</span></a><br>
+                    <a href="https://www.nasa.gov/mission_pages/msl/index.html" ><span>Curiosity Mars Rover</span></a><br>
+                    <a href="https://www.nasa.gov/mission_pages/hubble/main/index.html" ><span>Hubble Space Telescope</span></a><br>
+                    <a href="https://www.nasa.gov/mission_pages/webb/main/index.html" ><span>James Webb Space Telescope</span></a><br>
+                    <a href="https://www.nasa.gov/mission_pages/station/main/index.html" ><span>International Space Station</span></a><br>
+                    <a href="https://www.nasa.gov/mission_pages/insight/main/index.html" ><span>InSight Mars Lander</span></a><br>
+                    <a href="https://www.nasa.gov/perseverance" ><span>Mars Perseverance Rover</span></a>
+
+                </div>
             </div>
             <div class="col-md-4">
-                <h4>Missions</h4>
-            </div>
-            <div class="col-md-4">
-                <h4>History</h4>
+                <button type="button" class="collapsible" id="info">History</button>
+                <div class="content" id="info">
+                   <a href="https://www.nasa.gov/topics/history/index.html>">
+                    <span>
+                        All historical articles about NASA you can find Here.
+                    </span>
+                    </a>
+                </div>
             </div>
         </div>   
     </div>
-    <br>
-    <br>
-    <!-- Slideshow container -->
-    <div class="slideshow-container">
 
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
-      <img src="https://images-assets.nasa.gov/image/0302063/0302063~orig.jpg" style="width:100%">
-      <div class="text">Image 1</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
-      <img src="https://images-assets.nasa.gov/image/PIA17563/PIA17563~orig.jpg" style="width:100%">
-      <div class="text">Image 2</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
-      <img src="https://images-assets.nasa.gov/image/from-a-million-miles-away-nasa-camera-shows-moon-crossing-face-of-earth_20129140980_o/from-a-million-miles-away-nasa-camera-shows-moon-crossing-face-of-earth_20129140980_o~orig.png" style="width:100%">
-      <div class="text">Image 3</div>
-    </div>
-  
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
-  
-  <!-- The dots/circles -->
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-</div>
 </body>
 <script>
-var slideIndex = 1;
-showSlides(slideIndex);
+var coll = document.getElementsByClassName("collapsible");
+var i;
 
-// Next/previous controls
-function plusSlides(n) {
-  showSlides(slideIndex += n);
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
 }
-
-// Thumbnail image controls
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-}
-</script>
-<style>
-.dropdown-submenu {
-  position: relative;
-}
-
-.dropdown-submenu .dropdown-menu {
-  top: 0;
-  left: 100%;
-  margin-top: -1px;
-}
-</style>
-<script>
-    $(document).ready(function(){
-      $('.dropdown-submenu a.test').on("click", function(e){
-        $(this).next('ul').toggle();
-        e.stopPropagation();
-        e.preventDefault();
-      });
-    });
     </script>
 </html>
 
